--- a/manage.html
+++ b/manage.html
@@ -11,6 +11,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         hr {
             margin-top: 1rem;
@@ -142,8 +143,6 @@
                             <label for="username">Username</label>
                             <input type="text" class="form-control" name="username" id="username" placeholder="Username"
                                 required autofocus>
-                            <button type="button" name="randomUsername" id="randomUsername" class="btn btn-primary"
-                                btn-lg btn-block">Random Username</button>
                         </div>
                         <div class="form-group">
                             <label for="pass">Password</label>
@@ -165,6 +164,31 @@
                         <div class="form-group">
                             <label for="email">Email</label>
                             <input type="email" class="form-control" name="email" id="email" placeholder="Email"
+                                required>
+                        </div>
+                        <button type="submit" class="btn btn-primary col-12">Register</button>
+                    </form>
+                </div>
+            </div>
+            <div class="card text-dark bg-white mt-1">
+                <div class="card-body">
+                    <h4 class="card-title">Tutee Register</h4>
+                    <form id="form-tuteeRegister">
+                        <div class="form-group">
+                            <label for="email">Tutee email</label>
+                            <input type="text" class="form-control" name="email" id="tuteeEmail" placeholder="Email"
+                                required autofocus>
+                        </div>
+                        <div class="form-group">
+                            <label for="pass">Password</label>
+                            <input type="text" class="form-control" name="pass" id="tuteePass" placeholder="Password"
+                                required>
+                            <button type="button" name="randomPassword" id="tuteeRandomPassword" class="btn btn-primary"
+                                btn-lg btn-block">Random Password</button>
+                        </div>
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="text" class="form-control" name="name" id="tuteeName" placeholder="Real Name"
                                 required>
                         </div>
                         <button type="submit" class="btn btn-primary col-12">Register</button>
@@ -193,6 +217,12 @@
                     </div>
                 </div>
             </div>
+            <hr />
+            <h4 class="card-title">Volunteer Hour:</h4>
+            <select id='selTutorVH' class="form-control" style="width: auto;">
+                <option value='0'>Select Tutor</option>
+            </select>
+            <div class="VHcontrolElement mt-2"></div>
         </div>
     </div>
     <div class="tuteeTab" style="display: none;">
@@ -203,9 +233,29 @@
                     <tr>
                         <th scope="col">Tutee Name</th>
                         <th scope="col">Email</th>
+                        <th scope="col"></th>
                     </tr>
                 </thead>
                 <tbody class="listTutee"></tbody>
+                <div class="modal fade" id="deleteTutee" tabindex="-1" role="dialog" aria-labelledby="deleteTutee" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title">Delete Tutee</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                            </div>
+                            <div class="modal-body" id="rmModalTutee">
+                                
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                <button type="button" class="btn btn-primary confirm">Confirm</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </table>
         </div>
     </div>
