--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
         <div class="card text-white bg-success" style="margin: auto; width: fit-content; padding: 10px;">
           <div class="card-body">
             <h4 class="card-title">All Done!</h4>
-            <h5>Appointment successful! You can close this tab or refresh this page to schedule another class</h5>
-            <small>If you have any question feel free to contact our officer</small>
+            <h5>You have been successfully scheduled a class! You can close this tab or refresh this page to schedule another class.</h5>
+            <small>If you have any questions, please feel free to contact our officer.</small>
             <h3></h3>
             <a name="addEvent" id="addEvent" class="btn btn-primary" href="#" role="button">Add to Google Calendar</a>
           </div>
