--- a/index.html
+++ b/index.html
@@ -2,12 +2,165 @@
 <html lang="en">
 
 <head>
+  <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  <link rel="stylesheet" href="css/scheduler.css">
 </head>
 
 <body>
-  <script type="text/javascript">window.location.href="http://104.179.213.255:8080";</script>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <a class="navbar-brand" href="#">CIS TP - Schedule System</a>
+    <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
+      aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation"></button>
+    <div class="collapse navbar-collapse" id="collapsibleNavId">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Scheduling<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="login.html">Tutor Login</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav navbar-right">
+        <a class="nav-link gotoCn" href="#">中文 >>></a>
+      </ul>
+    </div>
+  </nav>
+  <div class="main">
+    <div class="container-fluid">
+      <div class="login" style="position: relative; top: 15px; display: none;">
+        <div class="card text-dark bg-white" style="width: fit-content; padding: 10px; margin: auto;">
+          <div class="card-body">
+            <h4 class="card-title">Tutee Login</h4>
+            <form id="form-login" method="GET">
+              <div class="loginError" style="display: none;">
+                  <div class="alert alert-warning" role="alert">
+                      <span>Incorrect email or password.</span>
+                  </div>
+              </div>
+              <div class="form-group">
+                  <label for="Email">Email</label>
+                  <input type="text" class="form-control" name="email" id="email"
+                      placeholder="Enter Your Email" required autofocus>
+              </div>
+              <div class="form-group">
+                  <label for="pass">Password</label>
+                  <input type="password" class="form-control" name="pass" id="pass" placeholder="Enter Your Password"
+                      required>
+              </div>
+              <div class="form-check">
+                <label class="form-check-label">
+                  <input type="checkbox" class="form-check-input" name="rememberEmail" id="rememberEmail" value="checkedValue">
+                  Remember email
+                </label>
+              </div>
+              <button type="submit" class="btn btn-primary col-12 mt-2">Login</button>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="step1" style="position: relative; top: 15px;">
+        <div class="card text-dark bg-white" style="margin: auto; width: fit-content; padding: 10px;">
+          <div class="card-body">
+            <h4 class="card-title">Please select a Tutor</h4>
+            <small class="card-title">Tutors information：<a href="https://docs.google.com/spreadsheets/d/1leGYA1fjxfZl4onhKxeOH4slWGWTnZc8S4b1dDnAEYI/edit?usp=sharing">Google Sheet</a></small>
+            <select id='selTutor' class="form-control" style='width: auto;'>
+              <option value='0'>Select Tutor</option>
+            </select>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="step2" style="position: relative; top: 10px; display: none;">
+        <div class="card text-dark bg-white" style="margin: auto; width: fit-content; padding: 10px;">
+          <div class="card-body">
+            <h4 class="card-title">Please select a Day</h4>
+            <input style="display: none;" id="selDate" type="text" placeholder="Select Date...">
+            <button type="button" class="btn btn-primary prev2" style="position: relative; top: 8px;">Previous</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="step3" style="position: relative; top: 10px; display: none;">
+        <div class="card text-dark bg-white" style="margin: auto; width: fit-content; padding: 10px;">
+          <div class="card-body">
+            <h4 class="card-title">Please select a Time</h4>
+            <select id='selTime' class="form-control" style='width: auto;'>
+              <option value='0'>Select Time</option>
+            </select>
+            <button type="button" class="btn btn-primary prev3" style="position: relative; top: 8px;">Previous</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="step4" style="position: relative; top: 10px; display: none;">
+        <div class="card text-dark bg-white" style="margin: auto; width: fit-content; padding: 10px;">
+          <div class="card-body">
+            <h4 class="card-title">Confirm your information</h4>
+            <div class="container">
+              <form>
+                <div class="form-group">
+                  <label for="name">Tutee Name:</label>
+                  <input type="text" class="form-control" id="name" value="" disabled>
+                </div>
+                <div class="form-group">
+                  <label for="emailTutee">Email:</label>
+                  <input type="email" class="form-control" id="emailTutee" value="" disabled>
+                </div>
+                <div class="form-group">
+                  <label for="date">Date:</label>
+                  <input type="text" class="form-control" id="date" value="" disabled>
+                </div>
+                <div class="form-group">
+                  <label for="time">Time:</label>
+                  <input type="text" class="form-control" id="time" value="" disabled>
+                </div>
+                <button type="button" class="btn btn-primary prev4"
+                  style="position: relative; top: 8px;">Previous</button>
+                <button type="submit" class="btn btn-primary scheduleClass float-right"
+                  style="position: relative; top: 8px;">Confirm</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="step5" style="position: relative; top: 10px; display: none;">
+        <div class="card text-white bg-success" style="margin: auto; width: fit-content; padding: 10px;">
+          <div class="card-body">
+            <h4 class="card-title">All Done!</h4>
+            <h5>You have been successfully scheduled a class! You can close this tab or refresh this page to schedule another class.</h5>
+            <small>If you have any questions, please feel free to contact our officer.</small>
+            <h3></h3>
+            <a name="addEvent" id="addEvent" class="btn btn-primary" href="#" role="button">Add to Google Calendar</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/leancloud-storage@4.8.0/dist/av-min.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="js/scheduling.js"></script>
 </body>
 
 </html>
